[package]
name = "test_02"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.3.22"
regex = "1.5.4"
vec_map = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
mongodb = "2.1.0"
lazy_static = "1.4.0"
serde_json = "1.0.79"
